src/_topbars.scss
@import "variables";
@import "mixins";

/* (Mobile First)
	Topbar DEFAULT
	========================================================================== */
.topbar {
	background: $primary;

	width: 100%;
	height: auto;
	min-height: 132px;
	padding: 12px 20px;

	display: flex;
	flex-direction: column;
	justify-content: center;

	.topbar-logo {
		display: flex;
		align-items: center;
		align-self: center;

		margin: 0 0 12px 0;
		max-width: 100%;

		.wedeploy-logo {
			.deploy,
			.liferay,
			.alpha-container {
				display: none;
			}
		}

		.topbar-logo-link {
			@include anim(color);
			color: $white;
			font-family: $font-family-secondary-bold;
			font-weight: 400;
			margin: 0;

			display: flex;
			flex-direction: row;
			justify-content: center;
			align-content: center;
			align-items: center;

			&:hover,
			&:focus {
				color: rgba($white, 0.6);
			}

			> *:last-child {
				margin: 0;
			}
		}

		.topbar-logo-image {
			height: 36px;
			margin: 0 12px 0 0;
		}

		.topbar-logo-text {
			font-size: 17px;
			line-height: 36px;
			margin: 0 12px 0 0;
		}

		.topbar-logo-icon {
			color: $accent;
			font-size: 24px;
			line-height: 36px;
			margin: 0 12px 0 0;
		}

	}

	.topbar-list-container {
		display: flex;
		justify-content: center;

		max-width: 100%;

		padding: 0;
		margin: 0;
	}

	.topbar-list {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: center;
		align-items: center;
		align-content: center;

		font-size: 0;
		list-style: none;

		padding: 0;
		margin: 0;

		.topbar-item {
			align-self: center;
			display: inline-block;
			height: 36px;
			margin: 0 20px;

			&:last-child {
				margin: 0 0 0 20px;
			}

			.topbar-link {
				@include anim(color);

				white-space: nowrap;

				font-size: 16px;
				font-family: $font-family-secondary-bold;
				color: rgba($white, 0.4);
				line-height: 36px;

				&.topbar-link-selected,
				&:hover {
					color: rgba($white, 0.8);
				}
			}
		}

		.topbar-avatar {
			.avatar-initials {
				background: $accent;
				color: $white;
			}

			.dropdown-menu {
				border-top: 0;
				border-top-left-radius: 0;
				border-top-right-radius: 0;
				margin: 12px 0 0 -102px;
			}
		}
	}

}

/* Topbar Fixed
	========================================================================== */

.topbar.topbar-fixed {
	position: fixed;
	top: 0;
	left: 0;
    z-index: 9999;
}

/* Topbar Large
	========================================================================== */
.topbar.topbar-large {

	.topbar-logo {

		.topbar-logo-image {
			height: 48px;
		}

		.topbar-logo-text {
			font-size: 22px;
		}

		.topbar-logo-icon {
			font-size: 36px;
			line-height: 48px;
		}

	}
}

/* Topbar DEFAULT NOT Mobile Site
	========================================================================== */
.topbar {
	@media (min-width: 960px) {
		height: 60px;
		min-height: 60px;

		flex-direction: row;
		justify-content: space-between;

		.topbar-logo {
			align-self: flex-start;
			margin: 0 12px 0 0;

			.wedeploy-logo {
				.deploy,
				.liferay,
				.alpha-container {
					display: inline-block;
				}
			}
		}

		.topbar-list-container {
			justify-content: flex-end;
		}

		.topbar-list {
			margin: 0 0 0 auto;
		}
	}
}

/* Topbar LARGE NOT Mobile Site
	========================================================================== */
.topbar.topbar-large {
	@media (min-width: 960px) {
		height: 84px;
		min-height: 84px;

		padding: 24px 20px 12px;
	}
}

/* Topbar LIGHT
	========================================================================== */
.topbar.topbar-light {
	background: white;

	.topbar-logo {
		.topbar-logo-link {
			color: rgba($primary, 0.8);
		}
	}

	.topbar-list {
		.topbar-item {
			.topbar-link {
				color: rgba($primary, 0.4);

				&.topbar-link-selected,
				&:hover {
					color: rgba($primary, 0.6);
				}
			}
		}
	}

}

